<resources>
    <string name="app_name">BMICalculator</string>
    <string name="picture">picture</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight_kg">Weight in kg </string>
    <string name="calculate">Calculate</string>
</resources>